--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+    <%- include('partials/head') %>
 
-<head>
-    <title>Crie</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/css/crie.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/crie/crie.html" />
 </head>
