--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <title>Cadastrar Aluno</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <%- include('partials/head') %>  
+    
     <link rel="stylesheet" href="cadastroAlunos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 </head>
 
