--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <title>Login</title>
-    <meta charset="UTF-8">
+    <%- include('partials/head') %>  
+        
+    <link rel="canonical" href="https://highperformance.herokuapp.com/pages/entrar/login.html" />
     <link rel="stylesheet" href="/css/login.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/entrar/login.html" />
 </head>
 
 <body>
