--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -1,14 +1,11 @@
-    <%- include('partials/head') %>  
-    
-    <link rel="stylesheet" href="cadastroAlunos.css">
-    <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
-</head>
-
+        <%- include('partials/header') %>
+        <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
+        <link rel="stylesheet" href="/css/cadastro.css">
+    </head>
 <body>
-
-    <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
-    </div>
+    
+    <%- include('partials/navBar') %>
+    <%- include('partials/bikeGif') %> 
 
     <div class="cadastro">
         <div class="row">
