--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,11 @@
-    <%- include('partials/head') %>  
-        
-    <link rel="canonical" href="https://highperformance.herokuapp.com/pages/entrar/login.html" />
-    <link rel="stylesheet" href="/css/login.css">
-</head>
-
+        <%- include('partials/header') %>
+        <link rel="canonical" href="https://highperformance.herokuapp.com/pages/entrar/login.html" />
+        <link rel="stylesheet" href="/css/login.css">
+    </head>
 <body>
-    <div class="center-align loader">
-        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
-    </div>
+    
+    <%- include('partials/navBar') %>
+    <%- include('partials/bikeGif') %> 
 
     <div class="row">
 
