--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -1,13 +1,11 @@
-    <%- include('partials/head') %>  
-
-    <link rel="stylesheet" href="../EditarAluno/editarAluno.css">
-    <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
-</head>
-
+        <%- include('partials/header') %>
+        <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
+        <link rel="stylesheet" href="../EditarAluno/editarAluno.css">
+    </head>
 <body>
-    <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
-    </div>
+    
+    <%- include('partials/navBar') %>
+    <%- include('partials/bikeGif') %>
 
     <div class="aluno">
         <div class="container" id="aluno">
