--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,5 +13,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="/js/pwa.webmanifest">
+    
+    
+    
+    
 
+    
+    
+    
+    
+    
+        
+
+        
+    
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+        
+
+
+    
