--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <input name="email" id="email" type="email" data-error=".errorTxt1">
-                    <label for="icon_prefix">E-mail</label>
+                    <label for="email">E-mail</label>
                     <div class="errorTxt1 right-align"></div>
                 </div>
                 <div class="input-field">
