acidionado o partials/footer em todas as páginas

--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -28,7 +28,7 @@
 .logout {
     background-color: #f0f0f5;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-    margin: 20vh 50px;
+    margin: 50px;
     height: 580px;
     border-radius: 10px;
 }
