--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m12 l12 baixoQuadrado">
             <i class="material-icons">person_add</i>
-            <a id="addAluno" href="../cadastroAluno/cadastrarAlunos.html">ADICIONAR NOVO ALUNO</a>          
+            <a id="addAluno" href="/cadastrarAlunos">ADICIONAR NOVO ALUNO</a>          
         </div>
 
         <!-- INICIO DA LISTA -->
@@ -111,20 +111,11 @@
         </div>
     </footer>
 
+    <!-- Mascarar telefone -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/topo.js"></script>
 
-    <!-- PDF -->
-    <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.65/build/pdfmake.min.js"></script>
-    <script src="/js/loader.js"></script>
-    <script src="/js/html2canvas.min.js"></script>
-    <script src="/js/exportar.js"></script>
+    <!-- <script src="../../js/maskTel.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script> -->
 
-    <!-- EXCEL -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery-table2excel@1.1.1/dist/jquery.table2excel.min.js"></script>
-</body>
-
-</html>
+    <%- include('partials/footer') %>
+   
