--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -174,7 +174,7 @@
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">question_answer</i>
                                     <textarea name="msg" id="textarea2" class="materialize-textarea" data-length="250" data-error=".errorTxt3"></textarea>
-                                    <label for="message">Mensagem</label>
+                                    <label for="textarea2">Mensagem</label>
                                     <div class="errorTxt3 right-align"></div>
                                 </div>
                             </div>
@@ -239,18 +239,4 @@
         </div>
     </footer>
 
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/topo.js"></script>
-    <script src="/js/loader.js"></script>
-
-     <!-- Validar form -->
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="/js/messages_pt_BR.js"></script>
-    <script src="/js/formSobre.js"></script>
-</body>
-
-</html>
+    <%- include('partials/footer') %>
