--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -53,8 +53,8 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input name="repSenha" id="repSenha" type="password" data-error=".errorTxt5">
                         <label for="repSenha"> Repetir Senha</label>
+                        <input name="repSenha" id="repSenha" type="password" data-error=".errorTxt5">                        
                         <div class="errorTxt5 right-align "></div>
                     </div>
                     <div class="input-field">
@@ -65,20 +65,4 @@
         </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/loader.js"></script>
-
-    <!-- Validar form -->
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="/js/messages_pt_BR.js"></script>
-    <script src="/js/formCadastro.js"></script>
-
-    <!-- Mascarar telefone -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="/js/maskTel.js"></script>
-</body>
-
-</html>
+    <%- include('partials/footer') %>
