--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -105,12 +105,4 @@
                     </footer>
 
 
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-                    <script src="/js/main.js"></script>
-                    <script src="/js/topo.js"></script>
-                    <script src="/js/loader.js"></script>
-                    <script src="/js/crie.js"></script>
-</body>
-
-</html>
+    <%- include('partials/footer') %>
