--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -124,12 +124,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/topo.js"></script>
     <script src="/js/finacas.js"></script>
-    <script src="/js/loader.js"></script>
-</body>
 
-</html>
+    <%- include('partials/footer') %>
+    
