--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,16 +185,5 @@
         </div>
     </footer>
 
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/topo.js"></script>
-    <script src="/js/carrousel.js"></script>
-    <script src="/js/loader.js"></script>
-    <script src="/js/pwa.js"></script>
-    <script src="/js/status.js"></script>
-</body>
-
-</html>
+    <%- include('partials/footer') %>
+    
