--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -99,21 +99,6 @@
     </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/topo.js"></script>
-    <script src="/js/loader.js"></script>
-    <script src="/js/treino.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.collapsible').collapsible();
-        });
-        $(document).ready(function() {
-            $('select').formSelect();
-        });
-    </script>
-</body>
-
-</html>
+    <script src="../../js/treino.js"></script>
+    
+    <%- include('partials/footer') %>
