Adicionando pagina de depoimentos

--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -1,16 +1,15 @@
         <%- include('partials/header') %>
         <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
-        <link rel="stylesheet" href="/css/cadastro.css">
+        <link rel="stylesheet" href="/css/cadastroAlunos.css">
     </head>
 <body>
     
-    <%- include('partials/navBar') %>
     <%- include('partials/bikeGif') %> 
 
     <div class="cadastro">
         <div class="row">
             <div class="col s12 m12 l6 center-align" id="cadastroContainer">
-                <a href="../alunos/alunos.html">
+                <a href="/home/alunos">
                     <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
                 </a>
                 <h1>Cadastrar novo aluno</h1>
