--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -84,10 +84,11 @@
                                 </div>
                                 <div class="col l4 offset-l2 s12">
                                     <ul>
+                                        <li><a class="white-text text-lighten-3" href="">Agenda</a></li>
                                         <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
-                                        <li><a class="white-text text-lighten-3" href="">Crie</a></li>
                                         <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
                                         <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
+                                        <li><a class="white-text text-lighten-3" href="/depoimento">Nos avalie</a></li>
                                     </ul>
                                 </div>
                                 <div class="col l1 s4 right">
