--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -36,6 +36,10 @@
         $('.collapsible').collapsible();
         $('select').formSelect();
     });
+
+    $(document).ready(function() {
+    $('input#input_text, textarea#textarea2').characterCounter();
+  });
 </script>
 
     </body>
