--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -47,7 +47,7 @@ body {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 40px;
-    padding-top: 30px;
+    padding-top: 15vh;
 }
 
 .cadastro p {
