--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -9,9 +9,9 @@
     <div class="logout">
         <div class="row">
             <div class="col s12 m12 l5" id="cadastroContainer">
-                <a href="/">
+                <!-- <a href="/">
                     <img class="responsive-img logo" src="/img/logo.png" alt="High Performance">
-                </a>
+                </a> -->
                 <h1>Cadastro</h1>
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>
 
