arrumando bug do textarea

--- a/views/depoimentos.ejs
+++ b/views/depoimentos.ejs
@@ -36,8 +36,8 @@
         <div class="row">
           <div class="input-field col s12">
               <i class="material-icons prefix">question_answer</i>
-              <textarea name="msg" id="textarea" class="materialize-textarea" data-length="100"></textarea>
-              <label for="textarea">Mensagem</label>
+              <textarea name="msg" id="textarea2" class="materialize-textarea" data-length="100"></textarea>
+              <label for="textarea2">Mensagem</label>
           </div>
       </div>
         
